--- a/index.html
+++ b/index.html
@@ -5,39 +5,128 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/CSS/normalize.css">
     <link rel="stylesheet" href="/CSS/1.css">
 </head>
 <body>
-    <header class="header conteiner">
-        <a href="/">
-            <img src="/IMG/logo.svg" alt="LOGO">
-        </a>
-        <nav class="nav">
-            <ul class="menu">
-                <li class="menu-item">
-                    <a href="#"  class="menu-link">Главная</a>
-                </li>
-                <li class="menu-item">
-                    <a href="#"  class="menu-link">Фильмы</a>
-                </li>
-                <li class="menu-item">
-                    <a href="#"  class="menu-link">Кинотеатры</a>
-                </li>
-                <li class="menu-item">
-                    <a href="#"  class="menu-link">События</a>
-                </li>
-                <li class="menu-item">
-                    <a href="#"  class="menu-link">Поддержка</a>
-                </li>
-            </ul>
-        </nav>
-        <div class="user">
-            <span class="">Привет, Александр</span>
-            <img class="avatar" src="/IMG/avatar.jpg" alt="Александр">
+    <header class="header">
+        <div class="navbar conteiner">
+            <a href="/">
+                <img src="/IMG/logo.svg" alt="LOGO">
+            </a>
+            <nav class="nav">
+                <ul class="menu">
+                    <li class="menu-item">
+                        <a href="#"  class="menu-link">Главная</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#"  class="menu-link">Фильмы</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#"  class="menu-link">Кинотеатры</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#"  class="menu-link">События</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#"  class="menu-link">Поддержка</a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="user">
+                <span class="">Привет, Александр</span>
+                <img class="avatar" src="/IMG/avatar.jpg" alt="Александр">
+            </div>
         </div>
+        <!-- /.navbar -->
+         <div class="film conteiner">
+            <div class="film-info">
+                <small class="film-title-small">Avengers: Infinity War</small>
+                <h1 class="film-title">Мстители: война бесконечности</h1>
+                <p class="film-description">Пока Мстители и их союзники продолжают защищать мир от различных опасностей, с которыми не смог бы справиться один супергерой, новая угроза возникает из космоса: Танос. Межгалактический тиран преследует цель собрать все шесть Камней Бесконечности - артефакты невероятной силы, с помощью которых можно менять реальность по своему желанию. Всё, с чем Мстители сталкивались ранее, вело к этому моменту – судьба Земли никогда ещё не была столь неопределённой.</p>
+                <div class="film-details">
+                    <div class="time">
+                        <img src="/IMG/Clock.svg" alt="Clock" class="time-icon">
+                        <span class="time-counter">240 мин.</span>
+                    </div>
+                    <div class="rating">
+                        <img src="IMG/imdb.png" alt="imdb logo" class="ratting-icon">
+                        <span class="rating-counter">
+                            <strong class="rating-current">9.2</strong> / 10
+                        </span>
+
+                    </div>
+                </div>
+            </div>
+            <!-- /.film-info -->
+             <a href="" class="film-trailer">
+                <svg width="100" height="100" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <circle cx="50" cy="50" r="50" fill="white"/>
+                    <g clip-path="url(#clip0_1_158)">
+                        <path d="M43.0758 30.0033C39.3071 27.8416 36.2518 29.6125 36.2518 33.9556V66.0059C36.2518 70.3533 39.3071 72.1219 43.0758 69.9623L71.0893 53.8967C74.8592 51.7342 74.8592 48.2306 71.0893 46.0686L43.0758 30.0033Z" fill="#F20D01"/>
+                    </g>
+                    <defs>
+                        <clipPath id="clip0_1_158">
+                            <rect width="41.8013" height="41.8013" fill="white" transform="translate(34.1837 29.0816)"/>
+                        </clipPath>
+                    </defs>
+                    </svg>
+             </a>
+             <!-- /.film-trailer -->
+         </div>
+         <!-- /.film -->
+         <div class="session conteiner">
+            <div class="session-date">
+                <span class="session-lable">Дата</span>
+                <div class="session-date-block">
+                    <div class="session-date-item">
+                        <span class="session-month">АПР</span>
+                        <span class="session-day">27</span>
+                        <span class="session-week">ПТ</span>
+                    </div>
+                    <div class="session-date-item">
+                        <span class="session-month">АПР</span>
+                        <span class="session-day">28</span>
+                        <span class="session-week">СБ</span>
+                    </div>
+                    <div class="session-date-item">
+                        <span class="session-month">АПР</span>
+                        <span class="session-day">29</span>
+                        <span class="session-week">ВС</span>
+                    </div>
+                    <div class="session-date-item">
+                        <span class="session-month">АПР</span>
+                        <span class="session-day">30</span>
+                        <span class="session-week">ПН</span>
+                    </div>
+                </div>
+            </div>
+            <!-- /.date -->
+             <div class="session-cinema">
+                <span class="session-lable">Кинотеатр</span>
+                <select class="select" name="cinema" >
+                    <option value="Октябрь, ул. Калужская 28">IMAX, ул. Калужская 28</option>
+                    <option value="Синема Парк, ул. ш. Космонавтов, 162Б (подъезд 2, этаж 2)">Синема Парк, ул. ш. Космонавтов, 162Б (подъезд 2, этаж 2)</option>
+                    <option value="Киномакс, ул. Мира, 41/1 (ТРК «Столица», этаж 2)">Киномакс, ул. Мира, 41/1 (ТРК «Столица», этаж 2)</option>
+                    <option value="Синема 5, ул. Петропавловская ул., 73А (этаж 4)">Синема 5, ул. Петропавловская ул., 73А (этаж 4)</option>
+                </select>
+             </div>
+             <!-- /.cinema -->
+            <div class="session-time">
+                <span class="session-lable">Время</span>
+                <select class="select" name="cinema" >
+                    <option value="12:00">12:00</option>
+                    <option value="16:00">16:00</option>
+                    <option value="18:00">18:00</option>
+                    <option value="20:00">20:00</option>
+                </select>
+            </div>
+            <!-- /.session-time -->
+         </div>
+         <!-- /.session -->
+         <!-- /.film -->
     </header>
 </body>
 </html>
