--- a/index.html
+++ b/index.html
@@ -7,16 +7,25 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/CSS/normalize.css">
-    <link rel="stylesheet" href="/CSS/1.css">
+    <link rel="stylesheet" href="CSS/normalize.css">
+    <link rel="stylesheet" href="CSS/1.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css"
+  />
 </head>
 <body>
     <header class="header">
         <div class="navbar conteiner">
             <a href="/">
-                <img src="/IMG/logo.svg" alt="LOGO">
+                <img src="IMG/logo.svg" alt="LOGO">
             </a>
             <nav class="nav">
+              <button class="m-menu">
+                <svg width="17" height="11" viewBox="0 0 17 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <line y1="0.5" x2="17" y2="0.5" stroke="white"/>
+                  <line y1="5.5" x2="17" y2="5.5" stroke="white"/>
+                  <line y1="10.5" x2="17" y2="10.5" stroke="white"/>
+                  </svg>
+              </button>
                 <ul class="menu">
                     <li class="menu-item">
                         <a href="#"  class="menu-link">Главная</a>
@@ -37,7 +46,7 @@
             </nav>
             <div class="user">
                 <span class="">Привет, Александр</span>
-                <img class="avatar" src="/IMG/avatar.jpg" alt="Александр">
+                <img class="avatar" src="IMG/avatar.jpg" alt="Александр">
             </div>
         </div>
         <!-- /.navbar -->
@@ -48,7 +57,7 @@
                 <p class="film-description">Пока Мстители и их союзники продолжают защищать мир от различных опасностей, с которыми не смог бы справиться один супергерой, новая угроза возникает из космоса: Танос. Межгалактический тиран преследует цель собрать все шесть Камней Бесконечности - артефакты невероятной силы, с помощью которых можно менять реальность по своему желанию. Всё, с чем Мстители сталкивались ранее, вело к этому моменту – судьба Земли никогда ещё не была столь неопределённой.</p>
                 <div class="film-details">
                     <div class="time">
-                        <img src="/IMG/Clock.svg" alt="Clock" class="time-icon">
+                        <img src="IMG/Clock.svg" alt="Clock" class="time-icon">
                         <span class="time-counter">240 мин.</span>
                     </div>
                     <div class="rating">
@@ -61,7 +70,7 @@
                 </div>
             </div>
             <!-- /.film-info -->
-             <a href="" class="film-trailer">
+             <a data-fancybox="video-gallery" data-src="https://www.youtube.com/watch?v=6l8JT9S-REY&ab_channel=LPRIDGE" href="" class="film-trailer">
                 <svg width="100" height="100" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <circle cx="50" cy="50" r="50" fill="white"/>
                     <g clip-path="url(#clip0_1_158)">
@@ -701,6 +710,7 @@
       </div>
       <a href="#" class="button button-pay">Перейти к оплате</a>
     </div>
-    <script src="/js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
